--- a/rx-server/bower.json
+++ b/rx-server/bower.json
@@ -1,8 +1,1 @@
-{
-	"name": "rx",
-	"dependencies": {
-		"angular": "~1.3.0",
-		"angular-resource": "~1.3.0",
-		"bootstrap-css-only": "~3.2.0"
-	}
-}
+{"name":"gradle-bower-installer","dependencies":{},"install":{"path":"/home/matt/rx/rx-server/src/main/resources/static/bower_components/","ignore":[],"sources":{}}}
