--- a/rx-server/src/main/resources/application.properties
+++ b/rx-server/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost/rx
 spring.datasource.username=rx_user
 spring.datasource.password=rx_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
